--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: Mingxua05840896
+    gscholar: citations?user=V4MEw70AAAAJ
+    twitter: Mingxuan0422
     github:  drmeerkat
     linkedIn: in/mingxuan-li
     # rss: rss
