--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ plainwhite:
     - title: Beyond that...
       url: "/"
 
-  email: mingxuan_li [at] brown [dot] edu
+  email: ml [at] cs [dot] columbia [dot] edu
 
   # generate social links in footer
   social_links:
