update new paper

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
   sass_dir: _sass
+markdown: kramdown
 plainwhite:
   name: Mingxuan Li
   tagline: In my end is my beginning.
