--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@ sass:
 markdown: kramdown
 plainwhite:
   name: Mingxuan Li
-  tagline: #In my end is my beginning.
+  tagline: 
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   
   navigation:
     # - title: My Work
     #   url: "/my-work"
-    - title: CV (Jan. 2024)
+    - title: CV (Jan. 2025)
       url: "/assets/resume.pdf" 
     - title: Beyond that...
       url: "/"
